examples/rust/failing/derive_attr_with_paths/Right.rs
#[derive(Debug, their::OtherTrait)]
struct Foo;
